libsysdecode: Use headers from WORLDTMP rather than DESTDIR for ioctls.
DIRDEPS_BUILD will have SYSROOT set already.  For buildworld
we pass along WORLDTMP as SYSROOT during the 'make everything' phase.
For direct builds DESTDIR will continue to work.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -643,7 +643,9 @@ LIBCOMPAT= SOFT
 .include "Makefile.libcompat"
 .endif
 
-WMAKE=		${WMAKEENV} ${MAKE} ${WORLD_FLAGS} -f Makefile.inc1 DESTDIR=${WORLDTMP}
+WMAKE=		${WMAKEENV} ${MAKE} ${WORLD_FLAGS} -f Makefile.inc1 \
+		SYSROOT=${WORLDTMP} \
+		DESTDIR=${WORLDTMP}
 
 IMAKEENV=	${CROSSENV}
 IMAKE=		${IMAKEENV} ${MAKE} -f Makefile.inc1 \
